<resources>
    <string name="app_name">Yatota</string>
    <string name="my_awesome_shop">My Awesome Shop</string>
    <string name="shop_text">All In one stop Shop</string>
    <string name="live_status">Live Shop Status</string>
    <string name="see_data_from_sensors">See Data from sensors</string>
    <string name="manager_attendants_coner">Manager/ Attendants</string>
    <string name="shop_records">Enter and View Shop Records</string>
    <string name="view_records_for_restockig">Enter product records and view records for restockig</string>
    <string name="product_restocking">Product Restocking</string>
    <string name="view_records_analysis">View records Analysis</string>
    <string name="info_analysis">Info Analysis</string>
    <string name="settins">Settins</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
