<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_menu_black_24dp" />


            <TextView
                android:id="@+id/headerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:gravity="center"
                android:text="@string/my_awesome_shop"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="40dp"
                android:gravity="center"
                android:layout_below="@+id/headerName"
                android:text="@string/shop_text"
                android:textColor="@color/colorLightText"
                android:textSize="15sp" />
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@color/banner_background"
                android:padding="5dp"
                android:src="@drawable/ic_add_location" />


        </RelativeLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="6dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/dashboard_item_1_background">

                        <View
                            android:layout_width="80dp"
                            android:layout_height="0dp"
                            android:background="@drawable/end_view_background"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageView
                            android:id="@+id/imageIcon1"
                            android:layout_width="65dp"
                            android:layout_height="65dp"
                            android:layout_marginLeft="12dp"
                            android:layout_marginTop="12dp"
                            android:background="@drawable/icon_background"
                            android:contentDescription="@string/app_name"
                            android:padding="10dp"
                            android:src="@drawable/ic_cloud"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/itemTitle1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="80dp"
                            android:text="@string/live_status"
                            android:textColor="@color/colorWhite"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@id/imageIcon1"
                            app:layout_constraintTop_toTopOf="@+id/imageIcon1" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="12dp"
                            android:ellipsize="end"
                            android:maxLines="2"
                            android:text="@string/see_data_from_sensors"
                            android:textColor="@color/colorLightText"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="@id/itemTitle1"
                            app:layout_constraintStart_toStartOf="@id/itemTitle1"
                            app:layout_constraintTop_toBottomOf="@id/itemTitle1" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="6dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/dashboard_item_2_background">

                        <View
                            android:layout_width="80dp"
                            android:layout_height="0dp"
                            android:background="@drawable/end_view_background"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageView
                            android:id="@+id/imageIcon2"
                            android:layout_width="65dp"
                            android:layout_height="65dp"
                            android:layout_marginLeft="12dp"
                            android:layout_marginTop="12dp"
                            android:background="@drawable/icon_background"
                            android:contentDescription="@string/app_name"
                            android:padding="10dp"
                            android:src="@drawable/ic_supervisor"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/itemTitle2"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="80dp"
                            android:text="@string/manager_attendants_coner"
                            android:textColor="@color/colorWhite"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@id/imageIcon2"
                            app:layout_constraintTop_toTopOf="@+id/imageIcon2" />

                        <TextView
                            android:id="@+id/item2Description"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="12dp"
                            android:ellipsize="end"
                            android:maxLines="2"
                            android:text="@string/shop_records"
                            android:textColor="@color/colorLightText"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="@id/itemTitle2"
                            app:layout_constraintStart_toStartOf="@id/itemTitle2"
                            app:layout_constraintTop_toBottomOf="@id/itemTitle2" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="6dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/dashboard_item_3_background">

                        <View
                            android:layout_width="80dp"
                            android:layout_height="0dp"
                            android:background="@drawable/end_view_background"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageView
                            android:id="@+id/imageIcon3"
                            android:layout_width="65dp"
                            android:layout_height="65dp"
                            android:layout_marginLeft="12dp"
                            android:layout_marginTop="12dp"
                            android:background="@drawable/icon_background"
                            android:contentDescription="@string/app_name"
                            android:padding="10dp"
                            android:src="@drawable/ic_shop"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/itemTitle3"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="80dp"
                            android:text="@string/product_restocking"
                            android:textColor="@color/colorWhite"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@id/imageIcon3"
                            app:layout_constraintTop_toTopOf="@+id/imageIcon3" />

                        <TextView
                            android:id="@+id/item3Description"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="12dp"
                            android:ellipsize="end"
                            android:maxLines="2"
                            android:text="@string/view_records_for_restockig"
                            android:textColor="@color/colorLightText"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="@id/itemTitle3"
                            app:layout_constraintStart_toStartOf="@id/itemTitle3"
                            app:layout_constraintTop_toBottomOf="@id/itemTitle3" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="6dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/dashboard_item_4_background">

                        <View
                            android:layout_width="80dp"
                            android:layout_height="0dp"
                            android:background="@drawable/end_view_background"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageView
                            android:id="@+id/imageIcon4"
                            android:layout_width="65dp"
                            android:layout_height="65dp"
                            android:layout_marginLeft="12dp"
                            android:layout_marginTop="12dp"
                            android:background="@drawable/icon_background"
                            android:contentDescription="@string/app_name"
                            android:padding="10dp"
                            android:src="@drawable/ic_info"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/itemTitle4"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="80dp"
                            android:text="@string/info_analysis"
                            android:textColor="@color/colorWhite"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@id/imageIcon4"
                            app:layout_constraintTop_toTopOf="@+id/imageIcon4" />

                        <TextView
                            android:id="@+id/item4Description"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="12dp"
                            android:ellipsize="end"
                            android:maxLines="2"
                            android:text="@string/view_records_analysis"
                            android:textColor="@color/colorLightText"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="@id/itemTitle4"
                            app:layout_constraintStart_toStartOf="@id/itemTitle4"
                            app:layout_constraintTop_toBottomOf="@id/itemTitle4" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>


            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>